# Purify

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum  nginx.conf
cmd/main/: main.go
easy_ocr_app/: .gitignore  Dockerfile  app.py  config.yaml  make_inference.py  requirements.txt
ml_research_moments/: README.md
nlp_words_app/: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  logger_config.py  requirements.txt  spell_checker.py  utils.py
nlp_words_app/data/: kartaslovsent.csv
purify_ml/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
purify_ml/data/processed/: generated_agressive.csv
purify_ml/data/raw/: categories.txt
purify_ml/llm/notebooks/: 1.0-cav-vse-gpt-initial-attempt.ipynb
purify_ml/ml_classifier_app/: Dockerfile  README.md  app.py  config.py  requirements.txt  tools.py
purify_ml/ml_classifier_app/weights/: .gitignore  toxic_comment_classifier.pkl  toxic_comment_classifier_word2vec.pkl  word2vec.model
purify_ml/notebooks/: 1.0-cav-initial-data-exploration.ipynb  2.0-cav-mistral-ai-data-augmentation.ipynb  3.0-cav-new-data-preprocessing.ipynb  4.0-example-request-localhost.ipynb  5.0-bad-words-analysis.ipynb  5.0-cav-bad-words-analysis.ipynb  6.0-cav-nlp-service-tests.ipynb
purify_ml/purify_ml/: __init__.py
src/ai/: handlers.go
src/cache/: cache.go
src/chatgpt/: handlers.go  request.go
src/config/: config.go  config.yaml
src/easy_ocr/: handlers.go  request.go
video_processing_service/: .gitignore  Dockerfile  app.py  models.py  requirements.txt  services.py
(+27 files in other folders)
