[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "purify_ml"
version = "0.0.1"
description = "ML core for Purify Plugin"
authors = [
  { name = "Alexey Chervonikov" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"


[tool.ruff]
line-length = 99
src = ["purify_ml"]
include = ["pyproject.toml", "purify_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["purify_ml"]
force-sort-within-sections = true

